--- a/app/src/main/res/layout/activity_add_items_page.xml
+++ b/app/src/main/res/layout/activity_add_items_page.xml
@@ -11,21 +11,23 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/addItemDummyImg"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
+        android:layout_marginTop="10dp"
         android:src="@drawable/dummy"
         app:civ_border_color="#FF000000"
         app:civ_border_width="1dp" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:layout_below="@+id/addItemDummyImg"
         android:id="@+id/txt1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="true"
+        android:padding="10dp"
         android:focusableInTouchMode="true">
         <EditText
             android:layout_width="match_parent"
@@ -45,6 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="true"
+        android:padding="10dp"
         android:focusableInTouchMode="true">
         <EditText
             android:layout_width="match_parent"
@@ -64,6 +67,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="true"
+        android:padding="10dp"
         android:focusableInTouchMode="true">
         <EditText
             android:layout_width="match_parent"
@@ -83,6 +87,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="true"
+        android:padding="10dp"
         android:focusableInTouchMode="true">
         <EditText
             android:layout_width="match_parent"
@@ -91,7 +96,6 @@
             android:textSize="22sp"
             android:textColorHint="@color/black"
             android:inputType="textMultiLine"
-            android:maxLines= "4"
             android:id="@+id/txt_addItem_Description"/>
 
     </com.google.android.material.textfield.TextInputLayout>
