--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -19,8 +19,8 @@
         android:textStyle="bold"
         android:textColor="@color/black" />
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:src="@drawable/login"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
@@ -60,15 +60,16 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <Button
-        android:background="#6271FF"
-        android:layout_marginTop="10dp"
-        android:layout_gravity="center"
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/loginBtn"
         android:layout_width="338dp"
         android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:background="#6271FF"
         android:text="LOGIN"
-        android:textSize="20sp"/>
+        android:textSize="20sp" />
+
     <TextView
         android:layout_gravity="center"
         android:id="@+id/forgetpasstxt_btn"
@@ -89,8 +90,8 @@
         android:text="---- or ----"
         android:textSize="32dp"/>
 
-    <Button
-        android:background="#6271FF"
+    <androidx.appcompat.widget.AppCompatButton
+        android:background="#33b249"
         android:layout_gravity="center"
         android:id="@+id/create_account_btn"
         android:layout_width="250dp"
