--- a/app/src/main/res/layout/activity_signup_page.xml
+++ b/app/src/main/res/layout/activity_signup_page.xml
@@ -19,8 +19,8 @@
     <ImageView
         android:layout_marginTop="10dp"
         android:layout_marginBottom="15dp"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:layout_gravity="center"
         android:src="@drawable/signup"/>
 
@@ -79,7 +79,8 @@
 
     </com.google.android.material.textfield.TextInputLayout>
     
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_marginTop="15dp"
         android:background="#6271FF"
         android:layout_width="338dp"
         android:layout_height="60dp"
