--- a/app/src/main/res/layout/activity_suitcase_main_menu.xml
+++ b/app/src/main/res/layout/activity_suitcase_main_menu.xml
@@ -18,27 +18,37 @@
         android:background="@drawable/mainmenu"
         android:elevation="10dp" />
 
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnPurchase_Menu"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
+    <TextView
+        android:id="@+id/thankYouTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/splash_img"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="216dp"
-        android:layout_marginEnd="10dp"
-        android:background="#6271FF"
-        android:gravity="center"
-        android:text="VIEW PURCHASED ITEM"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="80dp"
+        android:padding="10dp"
+        android:text="Thank You for Using SuitCase App!"
         android:textColor="@color/white"
-        android:textSize="22sp"
+        android:textSize="18sp"
         android:textStyle="bold" />
+    <TextView
+        android:justificationMode="inter_word"
+        android:textColor="@color/white"
+        android:layout_below="@+id/thankYouTextView"
+        android:id="@+id/gratitudeTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="We want to express our heartfelt gratitude for choosing SuitCase as your shopping companion. Your trust and support mean the world to us, and we're thrilled to be a part of your shopping journey."
+        android:textSize="16sp"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"/>
 
     <androidx.appcompat.widget.AppCompatButton
+        android:layout_marginBottom="25dp"
+        android:layout_above="@+id/bottom_navigation"
         android:id="@+id/LogOutMenu"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_below="@+id/btnPurchase_Menu"
         android:layout_marginStart="10dp"
         android:layout_marginTop="21dp"
         android:layout_marginEnd="10dp"
