:sparkles: adding password reset

--- a/app/src/main/res/layout/activity_forget_password_page.xml
+++ b/app/src/main/res/layout/activity_forget_password_page.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="#878383"
     android:gravity="center"
+    android:orientation="vertical"
+    android:padding="10dp"
     tools:context=".Forget_Password_Page">
 
     <TextView
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Forget Password"
+        android:text="Forgot Password"
         android:textSize="32dp"
+        android:layout_marginBottom="300dp"
         android:textStyle="bold"
-        android:textColor="@color/black" />
+        android:textColor="@color/white" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_marginTop="10dp"
-        android:layout_below="@+id/addItem_dummyImg"
-        android:id="@+id/txt1"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="50dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="true"
@@ -29,12 +29,25 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter Item Name"
+            android:hint="Enter Email"
             android:textSize="22sp"
             android:textColorHint="@color/black"
             android:inputType="text"
-            android:id="@+id/txt_addItem_Name"/>
+            android:id="@+id/txt_login_Email"/>
 
     </com.google.android.material.textfield.TextInputLayout>
+
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_marginBottom="50dp"
+        android:background="#33b249"
+        android:layout_gravity="center"
+        android:id="@+id/create_account_btn"
+        android:layout_width="250dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="10dp"
+        android:text="Reset Password"
+        android:textSize="20sp"/>
+
 
 </LinearLayout>
