:sparkles: added share text with messenging app of listdata and single one

--- a/app/src/main/res/layout/activity_forget_password_page.xml
+++ b/app/src/main/res/layout/activity_forget_password_page.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#878383"
     android:gravity="center"
     android:orientation="vertical"
@@ -15,13 +16,12 @@
         android:layout_height="wrap_content"
         android:text="Forgot Password"
         android:textSize="32dp"
-        android:layout_marginBottom="300dp"
+        android:layout_marginBottom="150dp"
         android:textStyle="bold"
         android:textColor="@color/white" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="true"
@@ -33,19 +33,59 @@
             android:textSize="22sp"
             android:textColorHint="@color/black"
             android:inputType="text"
-            android:id="@+id/txt_login_Email"/>
+            android:id="@+id/txtForegetPassEmailValid"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <!-- New Password Field -->
+    <com.google.android.material.textfield.TextInputLayout
+        android:visibility="gone"
+        android:layout_marginBottom="10dp"
+        android:id="@+id/textInputLayoutNewPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:focusable="true"
+        app:passwordToggleEnabled="true"
+        android:focusableInTouchMode="true">
+        <EditText
+            android:id="@+id/editTextNewPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="New Password"
+            android:textSize="22sp"
+            android:textColorHint="@color/black"
+            android:inputType="textPassword"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!-- Confirm Password Field -->
+    <com.google.android.material.textfield.TextInputLayout
+        android:visibility="gone"
+        app:passwordToggleEnabled="true"
+        android:layout_marginBottom="10dp"
+        android:id="@+id/textInputLayoutConfirmPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
+        <EditText
+            android:id="@+id/editTextConfirmPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Confirm Password"
+            android:textSize="22sp"
+            android:textColorHint="@color/black"
+            android:inputType="textPassword"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+
 
     <androidx.appcompat.widget.AppCompatButton
-        android:layout_marginBottom="50dp"
         android:background="#33b249"
         android:layout_gravity="center"
-        android:id="@+id/create_account_btn"
+        android:id="@+id/btnValidEmail"
         android:layout_width="250dp"
         android:layout_height="55dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="150dp"
         android:text="Reset Password"
         android:textSize="20sp"/>
 
