--- a/app/src/main/res/layout/activity_purchased_item_list_page.xml
+++ b/app/src/main/res/layout/activity_purchased_item_list_page.xml
@@ -11,6 +11,7 @@
     tools:context=".Purchased_item_list_page">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_above="@+id/bottom_navigation"
         android:id="@+id/PurchasedRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
